Add AGENTS.md to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ inc/divi-extensions/halt-advanced-tabs/node_modules/
 # OS / editor
 .DS_Store
 *.log
+
+# AI assistant instructions (personal)
+AGENTS.md
